Fix alignment of add summary page button

--- a/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
+++ b/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
@@ -4499,9 +4499,11 @@ div#sssh_finishedButton {
 *****************************************************************************/
 .itemresult-rating div.float-right {
   padding-top: 8px;
+
   .btn {
     float: right;
     margin-left: 4px;
+    margin-right: 0;
   }
 }
 
